[package]
name = "nhentai"
version = "0.0.1"
authors = ["professionalProgrammers"]
edition = "2018"

[dependencies]
select = "0.4.3"
reqwest = {version = "0.9.22", features = ["socks"]}
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
url = "1.2"

ratel = { git = "https://github.com/ratel-rust/ratel-core", rev = "2e790b33d53755a1cc2d973bf833baebd2f9958b" }
ratel-visitor = { git = "https://github.com/ratel-rust/ratel-core", rev = "2e790b33d53755a1cc2d973bf833baebd2f9958b"}


